@@ -56,6 +56,9 @@ Release 0.20.205.0 - unreleased
     HADOOP-6889. Make RPC to have an option to timeout - backport to 
     0.20-security. (John George and Ravi Prakash via mattf)
 
+    MAPREDUCE-2780. Use a utility method to set service in token. 
+    (Daryn Sharp via jitendra)
+
 Release 0.20.204.0 - unreleased
 
   NEW FEATURES
